# Integraci-n-Rob-tica-Visi-n-RL

./: .gitignore  Como ejecutar  README.md
RB/: CMakeLists.txt  package.xml
RB/launch/: logic.launch
RB/src/RB/: battleship_logic.py  game_logic_node.py
RL/: CMakeLists.txt  package.xml
RL/launch/: rlModel.launch
RL/src/RL/: rl_agent_node.py
RL/src/RL/models/saved_models/: evaluations.npz
VC_Board/: CMakeLists.txt  package.xml
VC_Board/launch/: gesture.launch
VC_Board/src/VC_Board/: aruco_utils.py  board_camera_node.py  board_main.py  board_node.py  board_processing.py  board_state.py  board_ui.py  object_tracker.py
VC_Gesture/: CMakeLists.txt  package.xml
VC_Gesture/launch/: gesture.launch
VC_Gesture/src/VC_Gesture/: classifier.py  hand_camera_node.py  hand_main.py  hand_node.py  segmentation.py  ui.py
catkin_ws/src/vc_battleship/: CMakeLists.txt  package.xml
catkin_ws/src/vc_battleship/launch/: game_logic_node.launch  game_logic_node.py  vc_battleship.launch
catkin_ws/src/vc_battleship/src/: aruco_util.py  board_ammo.py  board_config.py  board_geometry.py  board_main.py  board_node,py  board_node.py  board_processing.py  board_runtime.py  board_state.py  board_tracker.py  board_ui.py  calibrar_camara_interactivo.py  features.py  game_board_validation.py  game_logic.py  game_logic_node.py  gesture_node.py  hand_config.py  hand_main.py  hand_pipeline.py  normalization.py  object_tracker.py  segmentation.py  storage.py  tracking_utils.py  ui.py  usb_cam_publisher.py  webcam_publisher.py
