<?xml version="1.0"?>
<package format="2">
  <name>vc_battleship</name>
  <version>0.0.1</version>
  <description>Proyecto de visión + tablero + gestures + game logic</description>

  <!-- Quién lo mantiene -->
  <maintainer email="tuemail@example.com">laboratorio</maintainer>

  <!-- Licencia -->
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencias de compilación -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencias en ejecución -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Si usas geometry_msgs en algún nodo, añade esto: -->
  <!-- <build_depend>geometry_msgs</build_depend> -->
  <!-- <exec_depend>geometry_msgs</exec_depend> -->

</package>
